--- a/.github/workflows/build-disk.yml
+++ b/.github/workflows/build-disk.yml
@@ -4,6 +4,12 @@ on:
   schedule:
     - cron: "0 1 * * TUE"
   workflow_dispatch:
+    inputs:
+      upload-to-s3:
+        description: "Upload to S3"
+        required: false
+        default: false
+        type: boolean
 
 jobs:
   build_release:
@@ -41,17 +47,6 @@ jobs:
           rootfs: btrfs
           additional-args: --use-librepo=True
 
-      - name: Upload Artifact
-        if: github.event_name == 'pull_request'
-        uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v5
-        with:
-          name: ${{ github.event.repository.name }}-${{ matrix.platform }}
-          path: ${{ steps.build-iso.outputs.output-directory }}
-          if-no-files-found: error
-          retention-days: 0
-          compression-level: 0
-          overwrite: true
-
       - name: Brand ISOs
         env:
           PLATFORM: ${{ matrix.platform }}
@@ -82,8 +77,19 @@ jobs:
           sha256sum "${SOURCE_DIR}/${IMAGE_NAME}-${PLATFORM}.iso" | sudo tee "${SOURCE_DIR}/${IMAGE_NAME}-${PLATFORM}.iso-CHECKSUM"
           sudo rm -f "${SOURCE_DIR}/horizon-unbranded.iso"
 
+      - name: Upload Artifact
+        if: github.event_name == 'pull_request'
+        uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v5
+        with:
+          name: ${{ github.event.repository.name }}-${{ matrix.platform }}
+          path: ${{ steps.build-iso.outputs.output-directory }}
+          if-no-files-found: error
+          retention-days: 0
+          compression-level: 0
+          overwrite: true
+
       - name: Upload to S3
-        if: github.event_name != 'pull_request' && github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
+        if: inputs.upload-to-s3 == true && github.event_name != 'pull_request'
         shell: bash
         env:
           RCLONE_CONFIG_S3_ACCESS_KEY_ID: ${{ secrets.S3_ACCESS_KEY_ID }}
