--- a/system_files/etc/skel/.config/fastfetch/config.jsonc
+++ b/system_files/etc/skel/.config/fastfetch/config.jsonc
@@ -1,6 +1,3 @@
-// Load with --load-config examples/2.jsonc
-// Note that you must replace the image path to an existing image to display it.
-
 {
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
     "logo": {
@@ -35,6 +32,7 @@
             "type": "packages",
             "key": "├󰏖",
             "keyColor": "yellow"
+            "disabled": ["rpm"]
         },
         {
             "type": "shell",
