--- a/system_files/usr/lib/sysusers.d/nm-openconnect.conf
+++ b/system_files/usr/lib/sysusers.d/nm-openconnect.conf
@@ -1,2 +1,2 @@
-u nm-openconnect - "NetworkManager user for OpenConnect" / /sbin/nologin
+u nm-openconnect - "NetworkManager user for OpenConnect" - /sbin/nologin
 g nm-openconnect 972
